# otf-addons-aws

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CODEOWNERS  linting.yml  main.yml  test.yml  unittest.yml
src/opentaskpy/addons/aws/remotehandlers/: aws.py  creds.py  ecs.py  ecsfargate.py  lambda.py  s3.py
src/opentaskpy/plugins/lookup/aws/: secrets_manager.py  (+1 more)
src/opentaskpy/variablecaching/aws/: ssm.py  vc_secretsmanager.py  vc_ssm.py
test/: docker-compose.yml  tmp.sh
test/cfg/: variables.json.j2
test/cfg/batch/: batch_lambda_timeout.json
test/cfg/executions/: fargate_task.json  flagfile.json  lambda_timeout.json
test/cfg/transfers/: s3-file-watch.json  s3-to-s3-copy.json  s3-to-ssh.json
tests/: bandit.yaml  docker-compose.yml  dummy_lambda.sh  file_helper.py  lambda_failure.py  lambda_sleep_60.py  lambda_write_to_s3.py  test_cacheable_variable_secretsmanager.py  test_cacheable_variable_ssm.py  test_ecs_execution_schema_validate.py  test_lambda_execution_schema_validate.py  test_localstack.py  test_memory_large_file_transfer_s3.py  test_plugin_secrets_manager.py  test_plugin_ssm.py  test_remotehandler_ecs_execution.py  test_remotehandler_ecsfargate_execution.py  test_remotehandler_fargate_execution.py  test_remotehandler_lambda_execution.py  test_remotehandler_s3.py  test_remotehandler_s3_execution.py  test_remotehandler_s3_transfer.py  test_s3_source_schema_validate.py  test_taskhandler_transfer_dummy_with_ssm_caching.py
tests/fixtures/: localstack.py  moto.py
(+17 files in other folders)
