[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otf-addons-aws"
version = "0.3.0"
authors = [
  { name="Adam McDonagh", email="adam@elitemonkey.net" },
]
license = { text = "GPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
]
keywords = ["automation", "task", "framework", "aws", "s3", "ssm", "otf"]
dependencies = [
  "boto3 >= 1.26",
  "opentaskpy >= 0.4.2",
]
description = "Addons for opentaskpy, giving it the ability to push/pull via AWS S3, and pull variables from AWS SSM Parameter Store."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "flake8",
  "black >= 23.1.0",
  "flake8-bugbear",
  "pep8-naming",
  "flake8-use-fstring",
  "flake8-black",
  "isort",
  "flake8-isort",
  "pytest",
  "bumpver",
  "awscli",
  "awscli-local",
  "localstack-client",
  "pytest-shell",
  "lovely-pytest-docker",
]

[project.urls]
"Homepage" = "https://github.com/adammcdonagh/otf-addons-aws"
"Bug Tracker" = "https://github.com/adammcdonagh/otf-addons-aws/issues"

[tool.isort]
profile = 'black'

[tool.bumpver]
current_version = "0.3.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]